--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -495,7 +495,63 @@ jobs:
             exit 1
           }
 
-      - name: Notarize app (macOS only)
+      - name: Create DMG installer (macOS only)
+        if: matrix.os == 'macos-latest'
+        shell: bash
+        run: |
+          APP_BUNDLE="src-tauri/target/${{ matrix.target }}/release/bundle/macos/Reachy Mini Control.app"
+          BUNDLE_DIR="src-tauri/target/${{ matrix.target }}/release/bundle/macos"
+          
+          if [ ! -d "$APP_BUNDLE" ]; then
+            echo "❌ App bundle not found: $APP_BUNDLE"
+            exit 1
+          fi
+          
+          cd "$BUNDLE_DIR"
+          
+          # Create DMG with signed app (standard macOS installer)
+          echo "💿 Creating DMG installer..."
+          ARCH_SUFFIX="${{ matrix.target == 'aarch64-apple-darwin' && 'arm64' || 'x64' }}"
+          DMG_NAME="Reachy.Mini.Control_${{ steps.version.outputs.version }}_${ARCH_SUFFIX}.dmg"
+          DMG_TEMP_NAME="Reachy.Mini.Control.temp.dmg"
+          
+          # Remove old DMG if exists
+          rm -f "$DMG_NAME" "$DMG_TEMP_NAME" *.dmg
+          
+          # Create DMG with hdiutil
+          # -volname: Volume name shown in Finder
+          # -fs: File system (HFS+)
+          # -srcfolder: Source folder (the app)
+          # -format: Format (UDZO = compressed read-only)
+          # -ov: Overwrite existing
+          hdiutil create -volname "Reachy Mini Control" \
+            -srcfolder "Reachy Mini Control.app" \
+            -fs HFS+ \
+            -format UDZO \
+            -ov "$DMG_TEMP_NAME"
+          
+          if [ ! -f "$DMG_TEMP_NAME" ]; then
+            echo "❌ Failed to create DMG file"
+            exit 1
+          fi
+          
+          # Sign the DMG (required before notarization)
+          echo "✍️ Signing DMG..."
+          if ! codesign --force --sign "${{ secrets.APPLE_CERTIFICATE_NAME }}" \
+            --timestamp \
+            --options runtime \
+            "$DMG_TEMP_NAME"; then
+            echo "❌ DMG signing failed"
+            exit 1
+          fi
+          
+          # Rename to final name
+          mv "$DMG_TEMP_NAME" "$DMG_NAME"
+          
+          echo "✅ DMG created and signed: $DMG_NAME ($(du -h "$DMG_NAME" | cut -f1))"
+          echo "RELEASE_DMG_PATH=$BUNDLE_DIR/$DMG_NAME" >> $GITHUB_ENV
+
+      - name: Notarize DMG (macOS only)
         if: matrix.os == 'macos-latest'
         env:
           APPLE_API_ISSUER: ${{ env.APPLE_API_ISSUER }}
@@ -503,41 +559,24 @@ jobs:
           APPLE_API_KEY_PATH: ${{ env.APPLE_API_KEY_PATH }}
         shell: bash
         run: |
-          APP_BUNDLE="src-tauri/target/${{ matrix.target }}/release/bundle/macos/Reachy Mini Control.app"
-          
-          if [ ! -d "$APP_BUNDLE" ]; then
-            echo "❌ App bundle not found: $APP_BUNDLE"
-            exit 1
-          fi
-          
-          # Create ZIP for notarization
           BUNDLE_DIR="src-tauri/target/${{ matrix.target }}/release/bundle/macos"
-          ZIP_NAME="Reachy Mini Control.zip"
-          ZIP_PATH="$BUNDLE_DIR/$ZIP_NAME"
+          ARCH_SUFFIX="${{ matrix.target == 'aarch64-apple-darwin' && 'arm64' || 'x64' }}"
+          DMG_NAME="Reachy.Mini.Control_${{ steps.version.outputs.version }}_${ARCH_SUFFIX}.dmg"
+          DMG_PATH="$BUNDLE_DIR/$DMG_NAME"
           
-          echo "📦 Creating ZIP for notarization..."
-          echo "   Bundle: $APP_BUNDLE"
-          echo "   ZIP: $ZIP_PATH"
-          
-          # Change to bundle directory and create ZIP
-          cd "$BUNDLE_DIR"
-          ditto -c -k --keepParent "Reachy Mini Control.app" "$ZIP_NAME"
-          
-          # Verify ZIP was created (check in current directory after cd)
-          if [ ! -f "$ZIP_NAME" ]; then
-            echo "❌ Failed to create ZIP file: $ZIP_NAME"
-            echo "   Current directory: $(pwd)"
-            echo "   Files in directory:"
-            ls -la || true
+          if [ ! -f "$DMG_PATH" ]; then
+            echo "❌ DMG not found: $DMG_PATH"
             exit 1
           fi
+          
+          cd "$BUNDLE_DIR"
           
           # Get absolute path for notarytool
-          ABS_ZIP_PATH="$(pwd)/$ZIP_NAME"
-          echo "✅ ZIP created: $ABS_ZIP_PATH ($(du -h "$ZIP_NAME" | cut -f1))"
+          ABS_DMG_PATH="$(pwd)/$DMG_NAME"
+          echo "📦 Submitting DMG for notarization..."
+          echo "   DMG: $ABS_DMG_PATH ($(du -h "$DMG_NAME" | cut -f1))"
           
-          echo "📦 Submitting app for notarization..."
-          NOTARIZATION_OUTPUT=$(xcrun notarytool submit "$ABS_ZIP_PATH" \
+          NOTARIZATION_OUTPUT=$(xcrun notarytool submit "$ABS_DMG_PATH" \
             --key "$APPLE_API_KEY_PATH" \
             --key-id "$APPLE_API_KEY" \
             --issuer "$APPLE_API_ISSUER" \
@@ -548,58 +587,34 @@ jobs:
           
           # Check if notarization was successful
           if echo "$NOTARIZATION_OUTPUT" | grep -q "status: Accepted"; then
-            echo "✅ Notarization successful!"
+            echo "✅ DMG notarization successful!"
             
-            # Return to project root for stapler (APP_BUNDLE is relative to root)
-            cd "$GITHUB_WORKSPACE"
-            
-            # Staple the notarization ticket
-            echo "📎 Stapling notarization ticket..."
-            if ! xcrun stapler staple "$APP_BUNDLE"; then
-              echo "❌ Failed to staple notarization ticket"
+            # Staple the notarization ticket to the DMG
+            echo "📎 Stapling notarization ticket to DMG..."
+            if ! xcrun stapler staple "$DMG_NAME"; then
+              echo "❌ Failed to staple notarization ticket to DMG"
               exit 1
             fi
             
             # Validate that the ticket was stapled correctly
             echo "🔍 Validating stapled ticket..."
-            if ! xcrun stapler validate "$APP_BUNDLE"; then
+            if ! xcrun stapler validate "$DMG_NAME"; then
               echo "❌ Ticket validation failed - ticket may not be stapled correctly"
               exit 1
             fi
-            echo "✅ Ticket successfully stapled and validated"
+            echo "✅ Ticket successfully stapled and validated on DMG"
             
-            # Clean up notarization ZIP (no longer needed)
-            echo "🧹 Cleaning up notarization ZIP..."
-            cd "$BUNDLE_DIR"
-            rm -f "Reachy Mini Control.zip"
-            
-            # Create a ZIP file for GitHub release upload (after notarization)
-            echo "📦 Creating ZIP file for GitHub release..."
-            ARCH_SUFFIX="${{ matrix.target == 'aarch64-apple-darwin' && 'arm64' || 'x64' }}"
+            # Also create ZIP as fallback (for users who prefer ZIP)
+            # Note: ZIP is not notarized, but contains the signed app
+            echo "📦 Creating ZIP file as fallback..."
+            APP_BUNDLE="Reachy Mini Control.app"
             RELEASE_ZIP_NAME="Reachy.Mini.Control_${{ steps.version.outputs.version }}_${ARCH_SUFFIX}.zip"
-            # Remove old ZIP if exists
             rm -f "$RELEASE_ZIP_NAME"
-            # Create new ZIP with the notarized and stapled app
-            # Use ditto with --norsrc to avoid resource forks that might interfere with ticket
-            ditto -c -k --norsrc --keepParent "Reachy Mini Control.app" "$RELEASE_ZIP_NAME"
-            
-            # Verify the ticket is still present in the app before ZIP (should still be valid)
-            echo "🔍 Verifying ticket is still present in app bundle..."
-            if ! xcrun stapler validate "Reachy Mini Control.app"; then
-              echo "❌ Ticket validation failed after ZIP creation - ticket may have been lost"
-              exit 1
-            fi
-            echo "✅ Ticket is still valid in app bundle"
-            
-            if [ ! -f "$RELEASE_ZIP_NAME" ]; then
-              echo "❌ Failed to create release ZIP file"
-              exit 1
-            fi
-            
+            ditto -c -k --norsrc --keepParent "$APP_BUNDLE" "$RELEASE_ZIP_NAME"
             echo "✅ Release ZIP created: $RELEASE_ZIP_NAME ($(du -h "$RELEASE_ZIP_NAME" | cut -f1))"
             echo "RELEASE_ZIP_PATH=$BUNDLE_DIR/$RELEASE_ZIP_NAME" >> $GITHUB_ENV
           else
-            echo "❌ Notarization failed!"
+            echo "❌ DMG notarization failed!"
             echo ""
             echo "🔍 Checking notarization logs..."
             
@@ -630,6 +645,7 @@ jobs:
           files: |
             src-tauri/target/*/release/bundle/appimage/*.AppImage
             src-tauri/target/*/release/bundle/msi/*.msi
+            src-tauri/target/aarch64-apple-darwin/release/bundle/macos/*.dmg
             src-tauri/target/aarch64-apple-darwin/release/bundle/macos/*.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -642,6 +658,7 @@ jobs:
           files: |
             ${{ matrix.os == 'windows-latest' && format('src-tauri/target/{0}/release/bundle/msi/*.msi', matrix.target) || '' }}
             ${{ matrix.os == 'ubuntu-latest' && format('src-tauri/target/{0}/release/bundle/appimage/*.AppImage', matrix.target) || '' }}
+            ${{ matrix.os == 'macos-latest' && format('src-tauri/target/{0}/release/bundle/macos/*.dmg', matrix.target) || '' }}
             ${{ matrix.os == 'macos-latest' && format('src-tauri/target/{0}/release/bundle/macos/*.zip', matrix.target) || '' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
