docs: Update README with logo, version 0.3.3, Linux support, and improve GitHub Pages deployment
- Add centered logo with link to Hugging Face Spaces
- Update version from 0.2.6 to 0.3.3
- Add Linux (AppImage) platform support
- Fix GitHub repository name (reachy-mini-desktop-app)
- Integrate GitHub Pages deployment directly in release workflow
- Add update endpoint information
- Mark pages-deploy.yml as deprecated

--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -1,4 +1,8 @@
-name: Deploy to GitHub Pages
+# ⚠️ DEPRECATED: This workflow is no longer used.
+# GitHub Pages deployment is now integrated directly in release-unified.yml
+# This file is kept for reference but will not be triggered.
+
+name: Deploy to GitHub Pages (Deprecated)
 
 on:
   workflow_run:
