--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '24'
+          node-version: '24.11.1'  # LTS - Required for camera-controls (>=24.4.0)
           cache: 'yarn'
 
       - name: Setup Rust
