--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "tauri-app",
   "private": true,
-  "version": "0.3.4",
+  "version": "0.3.16",
   "type": "module",
+  "engines": {
+    "node": ">=24.4.0",
+    "npm": ">=10.0.0",
+    "yarn": ">=1.22.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -41,6 +46,7 @@
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
     "@react-three/postprocessing": "^3.0.4",
+    "@tanstack/react-virtual": "^3.13.12",
     "@tauri-apps/api": "^2.9.0",
     "@tauri-apps/plugin-positioner": "^2.3.1",
     "@tauri-apps/plugin-process": "^2.0.0",
