--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "reachy-mini-control"
-version = "0.3.4"
+version = "0.3.16"
 description = "Reachy Mini Control Application"
 authors = ["Reachy Mini Contributors"]
 edition = "2021"
@@ -24,6 +24,7 @@ tauri-plugin-shell = "2"
 tauri-plugin-positioner = "2"
 tauri-plugin-process = "2"
 tauri-plugin-updater = "2.0"
+tauri-plugin-macos-permissions = "2.3"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serialport = "4.2"
@@ -32,7 +33,6 @@ signal-hook = "0.3"
 [target.'cfg(target_os = "macos")'.dependencies]
 cocoa = "0.25"
 objc = "0.2"
-block = "0.1"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-cli = "2"
