--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tauri-app",
   "private": true,
-  "version": "0.6.0-alpha.1",
+  "version": "0.6.0-1",
   "type": "module",
   "engines": {
     "node": ">=24.4.0",
