--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -99,7 +99,39 @@ jobs:
         if: matrix.os == 'windows-latest'
         shell: pwsh
         run: |
-          pwsh -File ./scripts/build/build-sidecar-windows.ps1 || echo "Sidecar build skipped"
+          Write-Host "🔨 Building sidecar for Windows..."
+          pwsh -File ./scripts/build/build-sidecar-windows.ps1
+          
+          # Verify critical files exist
+          Write-Host ""
+          Write-Host "🔍 Verifying sidecar build output..."
+          
+          $requiredFiles = @(
+            "src-tauri/binaries/uv.exe",
+            "src-tauri/binaries/.venv"
+          )
+          
+          $missing = @()
+          foreach ($file in $requiredFiles) {
+            if (-not (Test-Path $file)) {
+              $missing += $file
+            }
+          }
+          
+          if ($missing.Count -gt 0) {
+            Write-Host "❌ Missing required files after sidecar build:"
+            foreach ($file in $missing) {
+              Write-Host "   - $file"
+            }
+            Write-Host ""
+            Write-Host "📦 Contents of src-tauri/binaries/:"
+            Get-ChildItem src-tauri/binaries/ -ErrorAction SilentlyContinue
+            exit 1
+          }
+          
+          Write-Host "✅ Sidecar build verified!"
+          Write-Host "📦 Contents of src-tauri/binaries/:"
+          Get-ChildItem src-tauri/binaries/
 
       - name: Update Windows resources config with cpython folder name
         if: matrix.os == 'windows-latest'
@@ -109,8 +141,10 @@ jobs:
           $CPYTHON_FOLDER = (Get-ChildItem -Directory "src-tauri/binaries/cpython-*" -ErrorAction SilentlyContinue | Select-Object -First 1).Name
           
           if (-not $CPYTHON_FOLDER) {
-            Write-Host "⚠️  No cpython folder found in src-tauri/binaries/, skipping config update"
-            exit 0
+            Write-Host "❌ No cpython folder found in src-tauri/binaries/"
+            Write-Host "   This is required for Windows build"
+            Get-ChildItem src-tauri/binaries/ -ErrorAction SilentlyContinue
+            exit 1
           }
           
           Write-Host "🔧 Found cpython folder: $CPYTHON_FOLDER"
@@ -124,11 +158,6 @@ jobs:
           
           Write-Host "✅ Updated tauri.windows.conf.json:"
           Get-Content src-tauri/tauri.windows.conf.json
-          
-          # Verify the binaries directory contents
-          Write-Host ""
-          Write-Host "📦 Contents of src-tauri/binaries/:"
-          Get-ChildItem src-tauri/binaries/
 
       - name: Setup Apple Code Signing (macOS only)
         if: matrix.os == 'macos-latest'
