--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "swiper": "^12.0.3",
     "three": "^0.181.0",
     "urdf-loader": "^0.12.6",
+    "use-sound": "^5.0.0",
     "zustand": "^5.0.8"
   }
 }
